2023-09-10  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/gpt.pk (GPT_SECTOR_SIZE): Remove.
	(GPT_SectorSize): New unit.
	(GPT_LBA): New type.
	(GPT_Header): Change type of fields to offset when appropriate.
	(GPT_Partition_Entry): Likewise.
	(GPT): Update.
	* testsuite/poke.pickles/gpt-test.pk (tests): Likewise.

2023-09-10  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/mbr.pk (MBR_SectorSize): New unit.
	(MBR_PartitionType): Change it to integral struct.
	(MBR_PTE): Change `lba' and `sector_count' to little-endian offset
	type.  Add `lba_end' method.
	(MBR): Mark `signature' and `magic' as little-endian.
	* testsuite/poke.pickles/mbr-test.pk (SAMPLE_MBR): New sample data.
	("Sample MBR verification"): New test to verify sample data.

2023-09-09  Denis Maryin  <des.maryin@googlemail.com>

	* pickles/Makefile.am (dist_pickles_DATA): Add new pickles.
	* pickles/gpt-partition-attrs.pk: New pickle.
	* pickles/gpt-partition-types.pk: Likewise.
	* pickles/gpt.pk: Liekwise.
	* pickles/guid.pk: Likewise.
	* pickles/mbr.pk (MBR_PT_*): New constants.
	(MBR_PartitionType): New type.
	(MBR_PTE): Use `MBR_PartitionType'.
	* testsuite/poke.pickles/gpt-test.pk: New test.
	* testsuite/poke.pickles/guid-test.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2023-09-09  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-lex.l (NEWLINE): Add `\r\n' sequence to newline
	definition.
	* doc/poke.texi (The Poke Language): Add a new section `Source Code
	Encoding'.

2023-09-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_trimmer): The type of the
	result of an array trim is an array bounded by number of elements.
	* testsuite/poke.pkl/arrays-17.pk: Adapt test to the new type of
	the trimmed value.
	* testsuite/poke.pkl/trim-26.pk: Likewise.
	* testsuite/poke.pkl/trim-32.pk: Likewise.

2023-09-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-insn.def: Remove PKL_INSN_ATRIM.