@@ -767,6 +767,7 @@ EXTRA_DIST = \
   poke.pkl/apush-diag-5.pk \
   poke.pkl/array-1.pk \
   poke.pkl/array-2.pk \
+  poke.pkl/array-3.pk \
   poke.pkl/array-bound-1.pk \
   poke.pkl/array-bound-2.pk \
   poke.pkl/array-bound-3.pk \
