@@ -1,0 +1,3 @@
+/* { dg-do run } */
+
+[.[2048] = "foo"];
